fix layer spacing in materials section

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -471,20 +471,21 @@ img {
 .materials-carousel-container img{
   position: relative;
   width: 100%;      
-  height: 100%; 
+  height: auto; 
   object-fit: cover;
 }
 
  .layer {
   position: absolute;
   top: 0;
-  left: 0;
-  width: 100%;
+  left: 2%;
+  width: 96%;
   height: 100%;
   background-color: rgba(71, 164, 245, 0.8); 
   pointer-events: none; 
   z-index: 1; 
 }
+
 .slide_image {
   position: relative;
 }
